# Codara

api/: .env  README.md  pyproject.toml
api/src/api/: config.py  main.py  router.py  settings.py
api/src/api/core/: __init__.py  cors.py  db.py  exception_handlers.py  logging.py
api/src/api/models/: __init__.py  module.py  (+5 more)
engine/: .env  .gitignore  Cargo.toml  README.md  clone.sh  new_adapter.sh
engine/migrations/: 20260323141518_init_schema.sql  20260427000000_align_schema_with_models.sql  20260427154048_new_error_table.sql  20260504000000_analysis_tables_text_ids.sql  20260504100000_align_run_status_values.sql  20260505000000_text_ids_project_and_run.sql
engine/src/: main.rs
engine/src/adapters/: contract_tests.rs  mod.rs
engine/src/adapters/python/: mod.rs  module_extractor.rs  parser.rs  symbol_extractor.rs
engine/src/analysis/: connector.rs  initializer.rs  mod.rs  raw_adapter.rs  run_lifecycle.rs  runner.rs  walker.rs
engine/src/config/: load_env.rs
engine/src/model/: analysis.rs  error.rs  extractor.rs  mod.rs  module.rs  project.rs  relation.rs  run.rs  symbol.rs  warning.rs
engine/src/persistence/: analysis_repository.rs  mod.rs  module_repository.rs  project_repository.rs  run_repository.rs
engine/src/services/: cloner.rs  db.rs  di.rs  listener.rs  mod.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: FlowDiagram.tsx  analyseModal.tsx  leftColumn.tsx  modal.tsx
frontend/src/hooks/: useAnalyseModal.tsx  useColumn.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: home.tsx
(+33 files in other folders)
